Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24040

BareMetal: ClangCodeModel works wrong with IAR toolchain.

XMLWordPrintable

    • 9e4fc34e7 (14.0), c41c3619b (14.0), 44927d7cd (14.0)

      I have QBS project with IAR toolchain 7.3 for ARM. I found several problems at Clang Code Model work with IAR toolchain.
      1. CCM doesn`t undefine _GNUC_ macro when IAR toolchain set (_ICCARM). Both __GNUC_ and _ICCARM_, seems in project. (screen 1-2)
      2. CCM marks some IAR compiler keywords as errors. (screen 3)
      3. CCM doesn`t hightlight code with macro _ARMVFP_ correctly despite of compiler flag --fpu vfpv4_sp is used. IAR compiler define _ARMVFP_ macro, when calls with --fpu vfpv4_sp flag. (screen 4-5).

        1. blueblink.7z
          151 kB
        2. screen_1.JPG
          screen_1.JPG
          100 kB
        3. screen_2.JPG
          screen_2.JPG
          82 kB
        4. screen_3.JPG
          screen_3.JPG
          66 kB
        5. screen_4.JPG
          screen_4.JPG
          36 kB
        6. screen_5.JPG
          screen_5.JPG
          80 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            ivan_shevtsov Ivan Shevtsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes