BareMetal: Add missing pre-defined macro

Task-number: QTCREATORBUG-24040
Change-Id: I8d3a8f263cdee1d7971d339a56e30a6742b45bc5
Reviewed-by: Christian Stenger <christian.stenger@qt.io>